--- a/index.html
+++ b/index.html
@@ -202,7 +202,24 @@
             <footer class="footer py-4">
                 <div class="container">
                     <div class="row align-items-center">
-                        <div class="col-lg-4 text-lg-start"> &copy; Lu Art 2025</div>
+                        <div class="col-lg-4 text-lg-start"> 
+                            &copy; Lu Art 2025
+                            <a href="admin-login.html" class="text-muted ms-3" style="font-size: 0.8em; text-decoration: none;">
+                                <i class="fas fa-cog"></i> Admin
+                            </a>
+                            <a href="test-admin.html" class="text-muted ms-2" style="font-size: 0.8em; text-decoration: none;">
+                                <i class="fas fa-test-tube"></i> Test
+                            </a>
+                            <a href="admin-simple.html" class="text-muted ms-2" style="font-size: 0.8em; text-decoration: none;">
+                                <i class="fas fa-plus"></i> Simple
+                            </a>
+                            <a href="test-sync.html" class="text-muted ms-2" style="font-size: 0.8em; text-decoration: none;">
+                                <i class="fas fa-sync"></i> Sync
+                            </a>
+                            <a href="test-debug.html" class="text-muted ms-2" style="font-size: 0.8em; text-decoration: none;">
+                                <i class="fas fa-bug"></i> Debug
+                            </a>
+                        </div>
                         <div class="col-lg-4 my-3 my-lg-0">
                             <a id="footer-whatsapp-btn" class="btn btn-dark btn-social mx-2" href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/lu.artcr/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
