--- a/tienda.html
+++ b/tienda.html
@@ -72,7 +72,7 @@
                                 </div>
                                 <h3 class="category-title mt-3" data-translate="shop.cups">Tazas</h3>
                             </a>
-                            <a href="tazas.html" class="btn btn-primary btn-xl text-uppercase" data-translate="shop.view_cups">Ver Tazas</a>
+                            <a href="tazas.html" class="btn btn-primary btn-xl text-uppercase" data-translate="shop.view_cups">Ver</a>
                         </div>
 
                         <!-- Paletas -->
@@ -83,7 +83,7 @@
                                 </div>
                                 <h3 class="category-title mt-3" data-translate="shop.palettes">Paletas</h3>
                             </a>
-                            <a href="paletas.html" class="btn btn-primary btn-xl text-uppercase" data-translate="shop.view_palettes">Ver Paletas</a>
+                            <a href="paletas.html" class="btn btn-primary btn-xl text-uppercase" data-translate="shop.view_palettes">Ver</a>
                         </div>
 
                         <!-- Snack Bowls -->
@@ -94,7 +94,7 @@
                                 </div>
                                 <h3 class="category-title mt-3" data-translate="shop.snack_bowls">Snack Bowls</h3>
                             </a>
-                            <a href="snackbowls.html" class="btn btn-primary btn-xl text-uppercase" data-translate="shop.view_snack_bowls">Ver Snack Bowls</a>
+                            <a href="snackbowls.html" class="btn btn-primary btn-xl text-uppercase" data-translate="shop.view_snack_bowls">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,12 @@
     <footer class="footer py-4">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-start"> &copy; Lu Art 2025</div>
+                <div class="col-lg-4 text-lg-start"> 
+                    &copy; Lu Art 2025
+                    <a href="admin-login.html" class="text-muted ms-3" style="font-size: 0.8em; text-decoration: none;">
+                        <i class="fas fa-cog"></i> Admin
+                    </a>
+                </div>
                 <div class="col-lg-4 my-3 my-lg-0">
                     <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/lu.artcr/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a id="footer-whatsapp-btn" class="btn btn-dark btn-social mx-2" href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
