--- a/snackbowls.html
+++ b/snackbowls.html
@@ -14,6 +14,8 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/technologies.css" rel="stylesheet" />
     <link href="css/sold-out.css" rel="stylesheet" />
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body id="page-top">
     <!-- Navigation-->
@@ -71,7 +73,7 @@
 
             <div class="row" id="productList">
                 <div class="col-lg-4 col-sm-6 mb-4">
-                    <div class="portfolio-item">
+                    <div class="portfolio-item" data-id="14">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
@@ -95,7 +97,7 @@
                 </div>
                 
                 <div class="col-lg-4 col-sm-6 mb-4">
-                    <div class="portfolio-item">
+                    <div class="portfolio-item" data-id="15">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
@@ -119,7 +121,7 @@
                 </div>
                 
                 <div class="col-lg-4 col-sm-6 mb-4">
-                    <div class="portfolio-item">
+                    <div class="portfolio-item" data-id="16">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
@@ -232,7 +234,12 @@
     <footer class="footer py-4">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-start"> &copy; Lu Art 2025</div>
+                <div class="col-lg-4 text-lg-start"> 
+                    &copy; Lu Art 2025
+                    <a href="admin-login.html" class="text-muted ms-3" style="font-size: 0.8em; text-decoration: none;">
+                        <i class="fas fa-cog"></i> Admin
+                    </a>
+                </div>
                 <div class="col-lg-4 my-3 my-lg-0">
                     <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/lu.artcr/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a id="footer-whatsapp-btn" class="btn btn-dark btn-social mx-2" href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
@@ -267,6 +274,10 @@
             'shop.sold_out_label': 'AGOTADO',
             'alert.product_sold_out': 'Producto Agotado',
             'alert.sold_out_message': 'Lo sentimos, {nombre} está agotado.',
+            'alert.product_added': 'Producto Agregado',
+            'alert.product_added_message': '{nombre} ha sido agregado al carrito.',
+            'alert.stock_max': 'Stock Máximo',
+            'alert.stock_message': 'Solo hay {stock} unidades disponibles de {nombre}.',
             'cart.title': 'Carrito de Compras',
             'cart.view_cart': 'Ver Carrito',
             'cart.total': 'Total',
@@ -310,6 +321,10 @@
             'shop.sold_out_label': 'SOLD OUT',
             'alert.product_sold_out': 'Product Sold Out',
             'alert.sold_out_message': 'Sorry, {nombre} is sold out.',
+            'alert.product_added': 'Product Added',
+            'alert.product_added_message': '{nombre} has been added to cart.',
+            'alert.stock_max': 'Maximum Stock',
+            'alert.stock_message': 'Only {stock} units available of {nombre}.',
             'cart.title': 'Shopping Cart',
             'cart.view_cart': 'View Cart',
             'cart.total': 'Total',
@@ -454,6 +469,9 @@
         setTimeout(() => {
             if (typeof actualizarEstadoBotones === 'function') {
                 actualizarEstadoBotones();
+            }
+            if (typeof updateProductImages === 'function') {
+                updateProductImages();
             }
         }, 100);
     });
