--- a/acceso-rapido.html
+++ b/acceso-rapido.html
@@ -179,6 +179,9 @@
                 <a href="test-categoria.html" class="btn btn-warning">🏷️ Test Categorías</a>
                 <a href="test-atributos.html" class="btn btn-warning">🔍 Test Atributos</a>
                 <a href="test-sweetalert.html" class="btn btn-info">🍭 Test SweetAlert</a>
+                <a href="test-traducciones-sweetalert.html" class="btn btn-success">🌐 Test Traducciones</a>
+                <a href="test-carrito-global.html" class="btn btn-primary">🌐 Test Carrito Global</a>
+                <a href="test-carrito-navbar.html" class="btn btn-success">🛒 Test Carrito Navbar</a>
                 <a href="test-carrito-edicion.html" class="btn btn-warning">🛒 Test Carrito</a>
                 <a href="test-carrito-completo.html" class="btn btn-danger">🛒 Test Completo</a>
                 <a href="test-debug.html" class="btn btn-danger">🐛 Debug</a>
