--- a/snackbowls.html
+++ b/snackbowls.html
@@ -32,6 +32,12 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#gallery" data-translate="nav.gallery">Galería</a></li>
                     <li class="nav-item"><a class="nav-link" href="tienda.html" data-translate="nav.shop">Tienda</a></li>
                     <li class="nav-item">
+                        <button id="navbar-carrito-btn" class="btn btn-outline-light btn-sm ms-2 position-relative" type="button">
+                            <i class="fas fa-shopping-cart"></i>
+                            <span id="navbar-contador-carrito" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="display: none;">0</span>
+                        </button>
+                    </li>
+                    <li class="nav-item">
                         <button id="lang-toggle" class="btn btn-outline-light btn-sm ms-2" type="button">
                             <i class="fas fa-language"></i> <span data-translate="nav.language">ES</span>
                         </button>
@@ -149,7 +155,7 @@
 
     <!-- Ver Carrito Button -->
     <div class="text-center mb-4">
-        <button class="btn btn-primary btn-xl text-uppercase" id="abrir-carrito" data-translate="cart.view_cart">Ver Carrito</button>
+        <button class="btn btn-primary btn-xl text-uppercase" id="abrir-carrito" data-translate="cart.view_cart">Ver Carrito <span id="contador-carrito" class="badge badge-light ml-2" style="display: none;">0</span></button>
     </div>
 
     <!-- Carrito Modal -->
@@ -283,6 +289,8 @@
             'cart.total': 'Total',
             'cart.confirm_purchase': 'Confirmar Compra',
             'cart.no_products': 'No hay productos en el carrito',
+            'cart.no_cart_available': 'Carrito no disponible',
+            'cart.go_to_products': 'Ve a una página de productos para ver tu carrito.',
             'modal.close': 'Cerrar',
             'payment.title': 'Confirmar Pago',
             'payment.name': 'Nombre completo',
@@ -330,6 +338,8 @@
             'cart.total': 'Total',
             'cart.confirm_purchase': 'Confirm Purchase',
             'cart.no_products': 'No products in cart',
+            'cart.no_cart_available': 'Cart not available',
+            'cart.go_to_products': 'Go to a product page to view your cart.',
             'modal.close': 'Close',
             'payment.title': 'Confirm Payment',
             'payment.name': 'Full name',
