--- a/snackbowls.html
+++ b/snackbowls.html
@@ -621,7 +621,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.js?v=20241220"></script>
     <!-- Carrito JS-->
     <script src="js/carrito.js"></script>
     
