sync b admin and web

--- a/tazas.html
+++ b/tazas.html
@@ -96,6 +96,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                             type="button"
                             data-id="1" 
+                            data-categoria="tazas"
                             data-nombre="Taza Dos Ojos" 
                             data-precio="20000"
                             data-stock="1"
@@ -122,6 +123,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                             type="button"
                             data-id="2" 
+                            data-categoria="tazas"
                             data-nombre="Taza Bruma" 
                             data-precio="17900"
                             data-stock="1"
@@ -148,6 +150,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                             type="button"
                             data-id="3" 
+                            data-categoria="tazas"
                             data-nombre="Taza Bruma 2.0" 
                             data-precio="17900"
                             data-stock="1"
@@ -173,6 +176,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                                 type="button"
                                 data-id="4" 
+                                data-categoria="tazas"
                                 data-nombre="Taza Tierra" 
                                 data-precio="13000"
                                 data-stock="1"
@@ -198,6 +202,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                                 type="button"
                                 data-id="5" 
+                                data-categoria="tazas"
                                 data-nombre="Taza Aurora" 
                                 data-precio="12000"
                                 data-stock="1"
@@ -225,6 +230,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                                 type="button"
                                 data-id="6" 
+                                data-categoria="tazas"
                                 data-nombre="Taza Halley" 
                                 data-precio="17900"
                                 data-stock="1"
@@ -251,6 +257,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                             type="button"
                             data-id="7" 
+                            data-categoria="tazas"
                             data-nombre="Taza Amanecer" 
                             data-precio="16000"
                             data-stock="1"
@@ -278,6 +285,7 @@
             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
             type="button"
             data-id="8" 
+            data-categoria="tazas"
             data-nombre="Taza Green Waves" 
             data-precio="24000"
             data-stock="0"
@@ -305,6 +313,7 @@
             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
             type="button"
             data-id="9" 
+            data-categoria="tazas"
             data-nombre="Taza Marito" 
             data-precio="24000"
             data-stock="0"
@@ -1282,6 +1291,9 @@
                 
                 console.log('Función limpiarTodo definida en tazas.html:', typeof window.limpiarTodo !== 'undefined');
             </script>
+
+            <script src="js/scripts.js?v=20241220"></script>
+            <script src="js/admin-sync.js"></script>
 
         </body>
     </html>
