--- a/paletas.html
+++ b/paletas.html
@@ -90,6 +90,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                                 type="button"
                                 data-id="1" 
+                                data-categoria="paletas"
                                 data-nombre="Paleta Vainilla" 
                                 data-precio="17900"
                                 data-stock="7"
@@ -114,6 +115,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                                 type="button"
                                 data-id="2" 
+                                data-categoria="paletas"
                                 data-nombre="Paleta pincelada" 
                                 data-precio="17900"
                                 data-stock="1"
@@ -138,6 +140,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                                 type="button"
                                 data-id="3" 
+                                data-categoria="paletas"
                                 data-nombre="Paleta pincelada 2.0" 
                                 data-precio="17900"
                                 data-stock="1"
@@ -162,6 +165,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                                 type="button"
                                 data-id="4" 
+                                data-categoria="paletas"
                                 data-nombre="Paleta Verde" 
                                 data-precio="17900"
                                 data-stock="1"
@@ -186,6 +190,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                                 type="button"
                                 data-id="5" 
+                                data-categoria="paletas"
                                 data-nombre="Paleta Verde 2.0" 
                                 data-precio="17900"
                                 data-stock="1"
@@ -390,6 +395,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js?v=20241220"></script>
+    <script src="js/admin-sync.js"></script>
     <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
     <script async src="//www.instagram.com/embed.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
