--- a/snackbowls.html
+++ b/snackbowls.html
@@ -92,6 +92,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                                 type="button"
                                 data-id="1" 
+                                data-categoria="snackbowls"
                                 data-nombre="Snack Bowl Pequeño" 
                                 data-precio="12900"
                                 data-stock="5"
@@ -116,6 +117,7 @@
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                                 type="button"
                                 data-id="2" 
+                                data-categoria="snackbowls"
                                 data-nombre="Snack Bowl Mediano" 
                                 data-precio="15900"
                                 data-stock="8"
@@ -139,7 +141,8 @@
                             <div class="portfolio-caption-subheading text-muted">₡18.900</div>
                             <button class="btn btn-primary btn-xl text-uppercase add-to-cart" 
                                 type="button"
-                                data-id="3" 
+                                data-id="3"
+                                data-categoria="snackbowls"
                                 data-nombre="Snack Bowl Grande" 
                                 data-precio="18900"
                                 data-stock="6"
@@ -622,6 +625,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js?v=20241220"></script>
+    <script src="js/admin-sync.js"></script>
     <!-- Carrito JS-->
     <script src="js/carrito.js"></script>
     
