--- a/admin.html
+++ b/admin.html
@@ -12,6 +12,8 @@
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/responsive.css" rel="stylesheet" />
+    <link href="css/responsive-improvements.css" rel="stylesheet" />
     <link href="css/technologies.css" rel="stylesheet" />
     <style>
         .admin-header {
@@ -556,7 +558,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/admin.js"></script>
-    <script src="js/admin-products.js"></script>
+    <script src="js/admin.js?v=3.5"></script>
+    <!-- <script src="js/admin-products.js"></script> -->
 </body>
 </html>
