--- a/tienda.html
+++ b/tienda.html
@@ -14,6 +14,8 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/technologies.css" rel="stylesheet" />
     <link href="css/tienda.css" rel="stylesheet" />
+    <link href="css/responsive.css" rel="stylesheet" />
+    <link href="css/responsive-improvements.css" rel="stylesheet" />
 </head>
 <body id="page-top">
     <!-- Navigation-->
@@ -71,7 +73,7 @@
                 <div class="col-lg-10">
                     <div class="row g-4">
                         <!-- Tazas -->
-                        <div class="col-md-4 text-center">
+                        <div class="col-lg-4 col-md-6 text-center mb-4">
                             <a href="tazas.html" class="category-link">
                                 <div class="category-image">
                                     <img src="assets/img/pottery-8026823_1280.jpg" alt="Tazas" class="img-fluid">
@@ -82,7 +84,7 @@
                         </div>
 
                         <!-- Paletas -->
-                        <div class="col-md-4 text-center">
+                        <div class="col-lg-4 col-md-6 text-center mb-4">
                             <a href="paletas.html" class="category-link">
                                 <div class="category-image">
                                     <img src="assets/img/Lu Art Photos/paletavainilla7.jpg" alt="Paletas" class="img-fluid">
@@ -93,7 +95,7 @@
                         </div>
 
                         <!-- Snack Bowls -->
-                        <div class="col-md-4 text-center">
+                        <div class="col-lg-4 col-md-6 text-center mb-4">
                             <a href="snackbowls.html" class="category-link">
                                 <div class="category-image">
                                     <img src="assets/img/pottery-8026823_1280.jpg" alt="Snack Bowls" class="img-fluid">
@@ -238,13 +240,13 @@
                             <div class="mb-4">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" id="factura-electronica">
-                                    <label class="form-check-label" for="factura-electronica">
+                                    <label class="form-check-label" for="factura-electronica" data-translate="invoice.checkbox_text">
                                         <strong>MARCAR SI REQUIERE FACTURA ELECTRÓNICA</strong>
                                     </label>
                                 </div>
                                 <div id="email-field" class="mt-3" style="display: none;">
-                                    <label for="email-factura" class="form-label">Correo electrónico para factura:</label>
-                                    <input type="email" class="form-control" id="email-factura" placeholder="ejemplo@correo.com">
+                                    <label for="email-factura" class="form-label" data-translate="invoice.email_label">Correo electrónico para factura:</label>
+                                    <input type="email" class="form-control" id="email-factura" placeholder="ejemplo@correo.com" data-translate-placeholder="invoice.email_placeholder">
                                 </div>
                             </div>
                             
@@ -334,7 +336,10 @@
             'payment.address': 'Dirección completa',
             'payment.notes': 'Notas adicionales',
             'payment.total': 'Total: ₡0',
-            'payment.send_order': 'Enviar Pedido'
+            'payment.send_order': 'Enviar Pedido',
+            'invoice.checkbox_text': 'MARCAR SI REQUIERE FACTURA ELECTRÓNICA',
+            'invoice.email_label': 'Correo electrónico para factura:',
+            'invoice.email_placeholder': 'ejemplo@correo.com'
         },
         en: {
             'nav.home': 'Home',
@@ -375,7 +380,10 @@
             'payment.address': 'Full address',
             'payment.notes': 'Additional notes',
             'payment.total': 'Total: ₡0',
-            'payment.send_order': 'Send Order'
+            'payment.send_order': 'Send Order',
+            'invoice.checkbox_text': 'CHECK IF ELECTRONIC INVOICE IS REQUIRED',
+            'invoice.email_label': 'Email for invoice:',
+            'invoice.email_placeholder': 'example@email.com'
         }
     };
 
@@ -410,6 +418,15 @@
             const key = element.getAttribute('data-translate');
             if (translations[language] && translations[language][key]) {
                 element.textContent = translations[language][key];
+            }
+        });
+
+        // Handle placeholder translations
+        const placeholderElements = document.querySelectorAll('[data-translate-placeholder]');
+        placeholderElements.forEach(element => {
+            const key = element.getAttribute('data-translate-placeholder');
+            if (translations[language] && translations[language][key]) {
+                element.placeholder = translations[language][key];
             }
         });
 
