paym modal works

--- a/snackbowls.html
+++ b/snackbowls.html
@@ -652,7 +652,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/sync-products.js?v=20241223"></script>
-    <script src="js/scripts.js?v=20241223"></script>
+    <script src="js/scripts.js?v=20250109-7"></script>
     <script src="js/admin-sync.js?v=20241222"></script>
     <!-- Carrito JS-->
     <script src="js/carrito.js"></script>
