--- a/admin.html
+++ b/admin.html
@@ -347,6 +347,8 @@
                                 <th>Categoría</th>
                                 <th>Precio</th>
                                 <th>Stock</th>
+                                <th>Valor Inventario</th>
+                                <th>Actualizar Stock</th>
                                 <th>Acciones</th>
                             </tr>
                         </thead>
@@ -558,7 +560,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/admin.js?v=3.5"></script>
+    <script src="js/admin.js?v=4.3"></script>
     <!-- <script src="js/admin-products.js"></script> -->
 </body>
 </html>
