--- a/paletas.html
+++ b/paletas.html
@@ -401,7 +401,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/sync-products.js?v=20241223"></script>
-    <script src="js/scripts.js?v=20241223"></script>
+    <script src="js/scripts.js?v=20250109-7"></script>
     <script src="js/admin-sync.js?v=20241222"></script>
     <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
     <script async src="//www.instagram.com/embed.js"></script>
