--- a/tazas.html
+++ b/tazas.html
@@ -803,7 +803,7 @@
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
             <script src="js/sync-products.js?v=20241223"></script>
-            <script src="js/scripts.js?v=20241223"></script>
+            <script src="js/scripts.js?v=20250109-7"></script>
             <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 
             <script async src="//www.instagram.com/embed.js"></script>
@@ -1312,7 +1312,7 @@
             </script>
 
             <!-- Scripts -->
-            <script src="js/scripts.js?v=20241223"></script>
+            <script src="js/scripts.js?v=20250109-7"></script>
             
             <!-- Función de emergencia para limpiar todo - DEFINIDA DIRECTAMENTE -->
             <script>
@@ -1351,7 +1351,7 @@
                 console.log('Función limpiarTodo definida en tazas.html:', typeof window.limpiarTodo !== 'undefined');
             </script>
 
-            <script src="js/scripts.js?v=20241223"></script>
+            <script src="js/scripts.js?v=20250109-7"></script>
             <script src="js/admin-sync.js?v=20241222"></script>
 
         </body>
