--- a/paletas.html
+++ b/paletas.html
@@ -18,8 +18,21 @@
     <link href="css/sold-out.css" rel="stylesheet" />
 </head>
 <body id="page-top">
+    <!-- Timer Banner (fijo en la parte superior) -->
+    <div id="timer-banner" class="timer-banner d-none" style="position: fixed; top: 0; left: 0; right: 0; z-index: 9999; background: linear-gradient(135deg, #ffc107 0%, #ff9800 100%); padding: 0.75rem 0; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 text-center">
+                    <i class="fas fa-clock me-2"></i>
+                    <strong>Tiempo restante para completar la compra:</strong>
+                    <span id="timer-banner-display" class="fw-bold ms-2" style="font-size: 1.3em; color: #721c24;">20:00</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="top: 0;">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -281,6 +294,12 @@
                                         <p class="text-muted mb-4">
                                             Por favor, realizar el pago por Sinpe Móvil al <strong>(+506)70605427</strong> o por transferencia bancaria a la cuenta CR...
                                         </p>
+                                        <!-- Timer de expiración del carrito -->
+                                        <div id="carrito-timer-container" class="alert alert-warning d-none" role="alert" style="border-radius: 10px; margin-bottom: 1rem;">
+                                            <i class="fas fa-clock me-2"></i>
+                                            <strong>Tiempo restante para completar la compra:</strong>
+                                            <span id="carrito-timer" class="fw-bold" style="font-size: 1.2em; color: #856404;">20:00</span>
+                                        </div>
                                     </div>
                                     
                                     <div class="mb-4">
@@ -401,7 +420,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/sync-products.js?v=20241223"></script>
-    <script src="js/scripts.js?v=20250109-7"></script>
+    <script src="js/scripts.js?v=20250109-13"></script>
     <script src="js/admin-sync.js?v=20241222"></script>
     <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
     <script async src="//www.instagram.com/embed.js"></script>
